# the-gatherer

./: .gitignore  README.md  manage.py  populate_db.py  pyproject.toml  requirements.txt
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_card_rulings.py  0003_alter_card_text.py  0004_remove_card_id_alter_card_uuid.py
core/templates/: main.html
the_gatherer/: asgi.py  settings.py  urls.py  wsgi.py
